--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -2,7 +2,9 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5vh;
+    height: 3vh;
+    min-height: 50px;
+    min-width: 700px;
     width: 60vh;
     background: black;
     color: white;
