--- a/src/style/heading.css
+++ b/src/style/heading.css
@@ -5,6 +5,8 @@
     flex-direction: row;
     align-items: center;
     height: 15vh;
+    min-height: 100px;
+    min-width: 700px;
     width: 60vh;
     background: black;
     color: white;
